[tool.poetry]
name = "gitsint"
version = "0.3.1"
description = "gitsint allows you to check everything from a github user."
authors = ["Zerostats"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zerostats/gitsint"
repository = "https://github.com/zerostats/gitsint"
keywords = ["osint", "github", "gitleaks", "username", "email", "cli", "security", "infosec"]


[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.4.0"
httpx = "^0.27.0"
trio = "^0.25.1"
tqdm = "^4.66.4"
colorama = "^0.4.6"
requests = "^2.31.0"
gitpython = "^3.1.43"
aiofiles = "^23.2.1"
detect-secrets = "^1.5.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pylint = "^3.2.1"
black = "^24.4.2"
isort = "^5.13.2"
poethepoet = "^0.26.1"
httpx = "^0.27.0"

[tool.poetry.scripts]
gitsint = "gitsint:main"


[tool.poe.tasks]
docker = "docker build . -t my-gitsint-image"
docker-run = "docker run my-gitsint-image gitsint"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
